# ncimonitor

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  DBcommon.py  README.md  README.rst  UsageDB.py  UsageDataset.py  make_SU_DB.py  make_gdata_DB.py  make_short_DB.py  nci_monitor.py  nci_usage.py  setup.cfg  setup.py
.circleci/: config.yml
conda/: environment.yml  meta.yaml
ncimonitor/: CI_reporting.py  DBcommon.py  JobsDataset.py  UsageDataset.py  make_SU_DB.py  make_gdata_DB.py  make_jobs_DB.py  make_short_DB.py  nci_jobs.py  nci_monitor.py  nci_usage.py  parse_account_usage_data.py  parse_user_storage_data.py
test/: test_DBcommon.py  test_UsageDataset.py
