[metadata]
name = ncimonitor
author = Aidan Heerdegen
author-email = aidan.heerdegen@anu.edu.au
summary = Monitor usage on the NCI HPC resources
description-file = README.rst
licence = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages = 
    ncimonitor

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
    setup.py
    conftest.py
    test

[entry_points]
console_scripts =
    ncimonitor = ncimonitor.nci_monitor:main
    nciusage = ncimonitor.nci_usage:main
    make_SU_DB = ncimonitor.make_SU_DB:main_argv
    make_short_DB = ncimonitor.make_short_DB:main_argv
    make_gdata_DB = ncimonitor.make_gdata_DB:main_argv
    parse_user_storage_data = ncimonitor.parse_user_storage_data:main_argv
    parse_account_usage_data = ncimonitor.parse_account_usage_data:main_argv

[extras]
# Optional dependencies
dev = 
    pytest
    sphinx
    recommonmark

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[tool:pytest]
addopts = --doctest-modules --doctest-glob='*.rst' --ignore setup.py --ignore conftest.py --ignore docs/conf.py
